--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=Tiendas
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@jjpfcu7tmc8bvugs_high?TNS_ADMIN=/app/wallet
+spring.datasource.url=jdbc:oracle:thin:@ecomarket_high?TNS_ADMIN=C:/Users/droid/desktop/Tiendas/wallet
+spring.datasource.username=ADMIN
+spring.datasource.password=Matidroidde1306@
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
+# application.properties
+api.key=apitiendas1554
+security.api.key.enabled=true
+
+
